docs/versioned_docs/version-1.2.5/reference/elements.mdx
<!-- Generated by port_legacy_docs.py v1 from v1.2.5 (d226d745169891f79b1a767ebbc64dc51143d178). Historical snapshot—do not edit directly. -->

<a id="elements"></a>
# Elements

**Elements** are interactive UI controls that go inside blocks — buttons, select menus, date pickers, text inputs, and so on. They're typically embedded in a [`SectionBlock`](/v1.2.5/reference/blocks#blocks.SectionBlock) (as an `accessory`), an [`ActionsBlock`](/v1.2.5/reference/blocks#blocks.ActionsBlock) (as one of several elements), or an [`InputBlock`](/v1.2.5/reference/blocks#blocks.InputBlock) (as the input control).

Many elements take [`Option`](/v1.2.5/reference/objects#objects.Option) or [`ConfirmationDialogue`](/v1.2.5/reference/objects#objects.ConfirmationDialogue) objects as parameters — see [Objects](/v1.2.5/reference/objects).

Slack reference: [https://api.slack.com/reference/block-kit/block-elements](https://api.slack.com/reference/block-kit/block-elements)

### Button {#elements.Button}

**Class**

```python
Button(text: TextLike, action_id: str, url: Optional[str] = None, value: Optional[str] = None, style: Optional[str] = None, confirm: Optional[ConfirmationDialogue] = None, accessibility_label: Optional[str] = None)
```

<div className="api-docstring">

An interactive element that inserts a button. The button can be a
trigger for anything from opening a simple link to starting a complex
workflow.

See: [https://api.slack.com/reference/block-kit/block-elements#button](https://api.slack.com/reference/block-kit/block-elements#button).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `TextLike` | text on the button (plaintext only; max 75 chars). |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `url` | `Optional[str]` | a URL to load in the user's browser when the button is clicked. |
| `value` | `Optional[str]` | the value sent with the interaction payload. |
| `style` | `Optional[str]` | the visual style of the button, one of `primary`, `danger`. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when<br />the button is clicked. |
| `accessibility_label` | `Optional[str]` | a string label for longer descriptive text about<br />a button element. Used by screen readers (max 75 chars). |

Raises:
    InvalidUsageError: if any of the provided arguments fail validation.

</div>

### ButtonStyle {#elements.ButtonStyle}

**Class**

```python

```

<div className="api-docstring">

Utility class for determining the style of `Buttons` and `WorkflowButtons`.

</div>

### ChannelMultiSelectMenu {#elements.ChannelMultiSelectMenu}

**Class**

```python
ChannelMultiSelectMenu(action_id: str, initial_channels: Optional[List[str]] = None, confirm: Optional[ConfirmationDialogue] = None, max_selected_items: Optional[int] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

This interactive UI element allows users to select multiple channels visible
    to the current user in the active workspace.

See: [https://api.slack.com/reference/block-kit/block-elements#channel_multi_select](https://api.slack.com/reference/block-kit/block-elements#channel_multi_select).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_channels` | `Optional[List[str]]` | a list of conversation IDs as strings that will<br />already be selected when the menu renders. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when<br />the menu is used. |
| `max_selected_items` | `Optional[int]` | the maximum number of items that can be selected<br />in the menu. |
| `focus_on_load` | `bool` | whether or not the menu will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the menu when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### ChannelSelectMenu {#elements.ChannelSelectMenu}

**Class**

```python
ChannelSelectMenu(action_id: str, initial_channel: Optional[str] = None, confirm: Optional[ConfirmationDialogue] = None, response_url_enabled: Optional[bool] = False, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

A select menu interactive UI element, sourced with a list of public channels visible
    to the current user.

See: [https://api.slack.com/reference/block-kit/block-elements#channels_select](https://api.slack.com/reference/block-kit/block-elements#channels_select).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_channel` | `Optional[str]` | the single (string) user ID that will be initially selected<br />when first presented to the user. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when an<br />option in the overflow menu is selected. |
| `response_url_enabled` | `Optional[bool]` | When set to true, the view_submission payload from the<br />menu's parent view will contain a response_url. (This response_url can be<br />used for message responses). |
| `focus_on_load` | `bool` | whether or not the input will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the input when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### CheckboxGroup {#elements.CheckboxGroup}

**Class**

```python
CheckboxGroup(action_id: str, options: Union[Option, List[Option]], initial_options: Optional[Union[Option, List[Option]]] = None, confirm: Optional[ConfirmationDialogue] = None, focus_on_load: bool = False)
```

<div className="api-docstring">

A checkbox group that allows a user to choose multiple items from a list
of possible options.

See: [https://api.slack.com/reference/block-kit/block-elements#checkboxes](https://api.slack.com/reference/block-kit/block-elements#checkboxes).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `options` | `Union[Option, List[Option]]` | a list of<br />[`Option`](/v1.2.5/reference/objects/#objects.Option) objects that will form<br />the content of the checkbox group. |
| `initial_options` | `Optional[Union[Option, List[Option]]]` | a list of<br />[`Option`](/v1.2.5/reference/objects/#objects.Option) objects that will be<br />initially selected when first presented to the user. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when<br />the checkbox group is used. |
| `focus_on_load` | `bool` | whether or not the checkbox group will be set to autofocus<br />within the view object. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### ConversationMultiSelectMenu {#elements.ConversationMultiSelectMenu}

**Class**

```python
ConversationMultiSelectMenu(action_id: str, initial_conversations: Optional[List[str]] = None, default_to_current_conversation: Optional[bool] = False, confirm: Optional[ConfirmationDialogue] = None, max_selected_items: Optional[int] = None, filter: Optional[ConversationFilter] = None, focus_on_load: Optional[bool] = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

This interactive UI element allows users to select multiple conversations visible
    to the current user in the active workspace.

See: [https://api.slack.com/reference/block-kit/block-elements#conversation_multi_select](https://api.slack.com/reference/block-kit/block-elements#conversation_multi_select).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_conversations` | `Optional[List[str]]` | a list of conversation IDs as strings that will<br />already be selected when the menu renders. |
| `default_to_current_conversation` | `Optional[bool]` | Pre-populates the select menu with the<br />conversation that the user was viewing when they opened the modal<br />(defaults to `False`). |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when<br />the menu is used. |
| `max_selected_items` | `Optional[int]` | the maximum number of items that can be selected<br />in the menu. |
| `filter` | `Optional[ConversationFilter]` | a [`Filter`](/v1.2.5/reference/objects/#objects.ConversationFilter)<br />object that filters out conversations that don't match the settings<br />of the filter. |
| `focus_on_load` | `Optional[bool]` | whether or not the menu will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the menu when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### ConversationSelectMenu {#elements.ConversationSelectMenu}

**Class**

```python
ConversationSelectMenu(action_id: str, initial_conversation: Optional[str] = None, default_to_current_conversation: Optional[bool] = False, confirm: Optional[ConfirmationDialogue] = None, response_url_enabled: Optional[bool] = False, filter: Optional[ConversationFilter] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

A select menu interactive UI element, sourced with a list of public and private channels,
    DMs, and MPIMs visible to the current user.

See: [https://api.slack.com/reference/block-kit/block-elements#conversations_select](https://api.slack.com/reference/block-kit/block-elements#conversations_select).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_conversation` | `Optional[str]` | the single (string) coversation ID that will be initially<br />selected when first presented to the user. |
| `default_to_current_conversation` | `Optional[bool]` | Pre-populates the select menu with the<br />conversation that the user was viewing when they opened the modal<br />(defaults to `False`). |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when an<br />option in the overflow menu is selected. |
| `response_url_enabled` | `Optional[bool]` | When set to true, the view_submission payload from the<br />menu's parent view will contain a response_url. (This response_url can be<br />used for message responses). |
| `filter` | `Optional[ConversationFilter]` | a [`Filter`](/v1.2.5/reference/objects/#objects.ConversationFilter)<br />object that filters out conversations that don't match the settings<br />of the filter. |
| `focus_on_load` | `bool` | whether or not the input will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the input when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### DatePicker {#elements.DatePicker}

**Class**

```python
DatePicker(action_id: str, initial_date: Optional[str] = None, confirm: Optional[ConfirmationDialogue] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

Interactive element that allows users to select a date from a calendar.

See: [https://api.slack.com/reference/block-kit/block-elements#datepicker](https://api.slack.com/reference/block-kit/block-elements#datepicker).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_date` | `Optional[str]` | the date (in `YYYY-MM-DD` format) that will appear on the<br />picker when it first renders. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when<br />the date picker is clicked. |
| `focus_on_load` | `bool` | whether or not the date picker will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a `TextType.PLAINTEXT` `Text` object that defines what text<br />will initially appear on the picker. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### DateTimePicker {#elements.DateTimePicker}

**Class**

```python
DateTimePicker(action_id: str, initial_datetime: Optional[int] = None, confirm: Optional[ConfirmationDialogue] = None, focus_on_load: bool = False)
```

<div className="api-docstring">

Allows users to select both a date and a time of day.

Provides the date-time formatted as a Unix timestamp.

See: [https://api.slack.com/reference/block-kit/block-elements#datetimepicker](https://api.slack.com/reference/block-kit/block-elements#datetimepicker).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_datetime` | `Optional[int]` | the initial value the date-time picker will be set to<br />when it first renders. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when<br />the button is date-time picker is used. |
| `focus_on_load` | `bool` | whether or not the datetime picker will be set to autofocus<br />within the view object. |

Raises:
    InvalidUsageError: if any of the provided arguments fail validation.

</div>

### EmailInput {#elements.EmailInput}

**Class**

```python
EmailInput(action_id: str, initial_value: Optional[str] = None, dispatch_action_config: Optional[DispatchActionConfiguration] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

Allows user to enter an email into a single-line text field.

See: [https://api.slack.com/reference/block-kit/block-elements#email](https://api.slack.com/reference/block-kit/block-elements#email).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_value` | `Optional[str]` | The initial value in the email input when it is loaded. |
| `dispatch_action_config` | `Optional[DispatchActionConfiguration]` | a `DispatchActionConfiguration` object that<br />determines when during text input the element returns a<br />`block_actions` payload. |
| `focus_on_load` | `bool` | whether or not the email input will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a `TextType.PLAINTEXT` `Text` object that defines what text<br />will initially appear in the input field. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### ExternalMultiSelectMenu {#elements.ExternalMultiSelectMenu}

**Class**

```python
ExternalMultiSelectMenu(action_id: str, min_query_length: Optional[int] = None, initial_options: Optional[Union[Option, List[Option], OptionGroup, List[OptionGroup]]] = None, confirm: Optional[ConfirmationDialogue] = None, max_selected_items: Optional[int] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

An interactive UI element that loads its options from an external data source,
    allowing for a dynamic list of options.

See: [https://api.slack.com/reference/block-kit/block-elements#external_multi_select](https://api.slack.com/reference/block-kit/block-elements#external_multi_select).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `min_query_length` | `Optional[int]` | minimum number of characters entered before the query<br />is dispactched (defaults to 3 if not provided). |
| `initial_options` | `Optional[Union[Option, List[Option], OptionGroup, List[OptionGroup]]]` | the [`Options`](/v1.2.5/reference/objects/#objects.Option)<br />to be intially selected when the element is first rendered. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when<br />the menu is used. |
| `max_selected_items` | `Optional[int]` | the highest number of items from the list that<br />can be selected at one time. |
| `focus_on_load` | `bool` | whether or not the menu will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the menu when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### ExternalSelectMenu {#elements.ExternalSelectMenu}

**Class**

```python
ExternalSelectMenu(action_id: str, initial_option: Optional[Union[Option, OptionGroup]] = None, min_query_length: Optional[int] = None, confirm: Optional[ConfirmationDialogue] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

A select menu interactive UI element, sourced with externally provided options.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_option` | `Optional[Union[Option, OptionGroup]]` | an<br />[`Option`](/v1.2.5/reference/objects/#objects.Option) object that will be<br />initially selected when first presented to the user. |
| `min_query_length` | `Optional[int]` | minimum number of characters entered before the query<br />is dispactched (defaults to 3 if not provided). |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when an<br />option in the overflow menu is selected. |
| `focus_on_load` | `bool` | whether or not the input will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the input when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### FileInput {#elements.FileInput}

**Class**

```python
FileInput(action_id: Optional[str] = None, filetypes: Optional[Union[str, List[str]]] = None, max_files: Optional[int] = None)
```

<div className="api-docstring">

An interactive element that allows users to upload files.

See: [https://api.slack.com/reference/block-kit/block-elements#file_input](https://api.slack.com/reference/block-kit/block-elements#file_input).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `Optional[str]` | an identifier so the source of the action can be known. |
| `filetypes` | `Optional[Union[str, List[str]]]` | a list of file extensions (as strings) that will be accepted<br />for upload. |
| `max_files` | `Optional[int]` | the maximum number of files that can be uploaded (between 1<br />and 10). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### Image {#elements.Image}

**Class**

```python
Image(alt_text: str = ' ', image_url: Optional[str] = None, slack_file: Optional[SlackFile] = None)
```

<div className="api-docstring">

An element to insert an image - this element can be used in section
and context blocks only. If you want a block with only an image in it,
you're looking for the Image block.

You must provide either one of `image_url` or `slack_file`

See: [https://api.slack.com/reference/block-kit/block-elements#image](https://api.slack.com/reference/block-kit/block-elements#image).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `alt_text` | `str` | a plain-text-only summary of the content of the image. |
| `image_url` | `Optional[str]` | a URL for a publicly hosted image (the user must provide<br />either `image_url` or `slack_file`). |
| `slack_file` | `Optional[SlackFile]` | a [`SlackFile`](/v1.2.5/reference/objects/#objects.SlackFile)<br />(the user must provide either `image_url` or `slack_file`). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation,<br />or both/neither of `image_url` and `slack_file` are provided. |

</div>

### NumberInput {#elements.NumberInput}

**Class**

```python
NumberInput(is_decimal_allowed: bool, action_id: Optional[str] = None, initial_value: Optional[str] = None, min_value: Optional[Union[float, int]] = None, max_value: Optional[Union[float, int]] = None, dispatch_action_config: Optional[DispatchActionConfiguration] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

This input elements accepts both integer and decimal numbers. For example,
0.25, 5.5, and -10 are all valid input values.

See [https://api.slack.com/reference/block-kit/block-elements#number](https://api.slack.com/reference/block-kit/block-elements#number).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `is_decimal_allowed` | `bool` | whether to accept decimal values as input. |
| `action_id` | `Optional[str]` | an identifier so the source of the action can be known. |
| `initial_value` | `Optional[str]` | the initial value in the number input when it is loaded. |
| `min_value` | `Optional[Union[float, int]]` | minimum accepted value for the input field. |
| `max_value` | `Optional[Union[float, int]]` | maximum accepted value for the input field. |
| `dispatch_action_config` | `Optional[DispatchActionConfiguration]` | a `DispatchActionConfiguration` object that<br />determines when during text input the element returns a<br />`block_actions` payload. |
| `focus_on_load` | `bool` | whether or not the menu will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the input when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### OverflowMenu {#elements.OverflowMenu}

**Class**

```python
OverflowMenu(action_id: str, options: Union[Option, List[Option]], confirm: Optional[ConfirmationDialogue] = None)
```

<div className="api-docstring">

Context menu for additional options (think '...').

See [https://api.slack.com/reference/block-kit/block-elements#overflow](https://api.slack.com/reference/block-kit/block-elements#overflow).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `options` | `Union[Option, List[Option]]` | a list of<br />[`Option`](/v1.2.5/reference/objects/#objects.Option) objects that will form<br />the content of the overflow menu. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when an<br />option in the overflow menu is selected. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### PlainTextInput {#elements.PlainTextInput}

**Class**

```python
PlainTextInput(action_id: str, initial_value: Optional[str] = None, multiline: bool = False, min_length: Optional[int] = None, max_length: Optional[int] = None, dispatch_action_config: Optional[DispatchActionConfiguration] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

A plain-text input, similar to the HTML &lt;input&gt; tag, creates a field where a user
can enter freeform data. It can appear as a single-line field or a larger text
area using the multiline flag.

See: [https://api.slack.com/reference/block-kit/block-elements#input](https://api.slack.com/reference/block-kit/block-elements#input).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_value` | `Optional[str]` | the initial value in the plain-text input when it is loaded. |
| `multiline` | `bool` | whether to accept multiple lines of input(defaults to false). |
| `min_length` | `Optional[int]` | minimum number of characters to accept as input. |
| `max_length` | `Optional[int]` | maximum number of characters to accept as input. |
| `dispatch_action_config` | `Optional[DispatchActionConfiguration]` | a `DispatchActionConfiguration` object that<br />determines when during text input the element returns a<br />`block_actions` payload. |
| `focus_on_load` | `bool` | whether or not the input will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the input when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### RadioButtonGroup {#elements.RadioButtonGroup}

**Class**

```python
RadioButtonGroup(action_id: str, options: List[Option], initial_option: Optional[Option] = None, confirm: Optional[ConfirmationDialogue] = None, focus_on_load: bool = False)
```

<div className="api-docstring">

A radio button group that allows a user to choose one item from a list of possible options.

See: [https://api.slack.com/reference/block-kit/block-elements#radio](https://api.slack.com/reference/block-kit/block-elements#radio).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `options` | `List[Option]` | a list of<br />[`Option`](/v1.2.5/reference/objects/#objects.Option) objects that will form<br />the content of the radio button group. |
| `initial_option` | `Optional[Option]` | an<br />[`Option`](/v1.2.5/reference/objects/#objects.Option) object that will be<br />initially selected when first presented to the user. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when an<br />option in the overflow menu is selected. |
| `focus_on_load` | `bool` | whether or not the input will be set to autofocus<br />within the view object. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### RichTextInput {#elements.RichTextInput}

**Class**

```python
RichTextInput(action_id: str, initial_value: Optional[RichText] = None, dispatch_action_config: Optional[DispatchActionConfiguration] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

Allows users to enter formatted text in a WYSIWYG editor, similar to the Slack
    messaging experience.

See: [https://api.slack.com/reference/block-kit/block-elements#rich_text_input](https://api.slack.com/reference/block-kit/block-elements#rich_text_input).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_value` | `Optional[RichText]` | The initial value in the rich text input when it is loaded. |
| `dispatch_action_config` | `Optional[DispatchActionConfiguration]` | a `DispatchActionConfiguration` object that<br />determines when during text input the element returns a<br />`block_actions` payload. |
| `focus_on_load` | `bool` | whether or not the menu will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the menu when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### StaticMultiSelectMenu {#elements.StaticMultiSelectMenu}

**Class**

```python
StaticMultiSelectMenu(action_id: str, options: Union[Option, List[Option]], option_groups: Optional[Union[OptionGroup, List[OptionGroup]]] = None, initial_options: Optional[Union[Option, List[Option], OptionGroup, List[OptionGroup]]] = None, confirm: Optional[ConfirmationDialogue] = None, max_selected_items: Optional[int] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

The most basic form of select menu containing a static list of options
passed in when defining the element.

See: [https://api.slack.com/reference/block-kit/block-elements#static_multi_select](https://api.slack.com/reference/block-kit/block-elements#static_multi_select).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `options` | `Union[Option, List[Option]]` | a list of [`Options`](/v1.2.5/reference/objects/#objects.Option)<br />(max 100). Only one of `options` or `option_groups` must be<br />provided. |
| `option_groups` | `Optional[Union[OptionGroup, List[OptionGroup]]]` | a list of<br />[`OptionGroups`](/v1.2.5/reference/objects/#objects.OptionGroup)<br />(max 100). Only one of `options` or `option_groups` can be<br />provided. |
| `initial_options` | `Optional[Union[Option, List[Option], OptionGroup, List[OptionGroup]]]` | the [`Options`](/v1.2.5/reference/objects/#objects.Option)<br />to be intially selected when the element is first rendered. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when<br />the menu is used. |
| `max_selected_items` | `Optional[int]` | the |
| `focus_on_load` | `bool` | whether or not the menu will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the menu when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### StaticSelectMenu {#elements.StaticSelectMenu}

**Class**

```python
StaticSelectMenu(action_id: str, options: Optional[List[Option]] = None, option_groups: Optional[List[OptionGroup]] = None, initial_option: Optional[Union[Option, OptionGroup]] = None, confirm: Optional[ConfirmationDialogue] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

A simple select menu interactive UI element, with a static list of options passed in when
    defining the element.

See: [https://api.slack.com/reference/block-kit/block-elements#static_select](https://api.slack.com/reference/block-kit/block-elements#static_select).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `options` | `Optional[List[Option]]` | a list of<br />[`Option`](/v1.2.5/reference/objects/#objects.Option) objects that will form<br />the content of the menu (max 100). |
| `option_groups` | `Optional[List[OptionGroup]]` | a list of<br />[`OptionGroups`](/v1.2.5/reference/objects/#objects.OptionGroup)<br />(max 100). Only one of `options` or `option_groups` can be<br />provided. |
| `initial_option` | `Optional[Union[Option, OptionGroup]]` | an<br />[`Option`](/v1.2.5/reference/objects/#objects.Option) object that will be<br />initially selected when first presented to the user. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when an<br />option in the overflow menu is selected. |
| `focus_on_load` | `bool` | whether or not the input will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the input when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### TimePicker {#elements.TimePicker}

**Class**

```python
TimePicker(action_id: str, initial_time: Optional[str] = None, confirm: Optional[ConfirmationDialogue] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None, timezone: Optional[str] = None)
```

<div className="api-docstring">

An interactive UI element that allows users to select a time of day.

See: [https://api.slack.com/reference/block-kit/block-elements#timepicker](https://api.slack.com/reference/block-kit/block-elements#timepicker).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_time` | `Optional[str]` | — |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when<br />the input field is used. |
| `focus_on_load` | `bool` | whether or not the menu will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the menu when it's initially rendered. |
| `timezone` | `Optional[str]` | a string in the IANA format, e.g. "America/Chicago". |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### URLInput {#elements.URLInput}

**Class**

```python
URLInput(action_id: str, initial_value: Optional[str] = None, dispatch_action_config: Optional[DispatchActionConfiguration] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

An interactive UI element for collecting URL input from users.

See: [https://api.slack.com/reference/block-kit/block-elements#url](https://api.slack.com/reference/block-kit/block-elements#url).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_value` | `Optional[str]` | the text to populate the input field with when it<br />is first rendered. |
| `dispatch_action_config` | `Optional[DispatchActionConfiguration]` | a `DispatchActionConfiguration` object that<br />determines when during text input the element returns a<br />`block_actions` payload. |
| `focus_on_load` | `bool` | whether or not the menu will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the input when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### UserMultiSelectMenu {#elements.UserMultiSelectMenu}

**Class**

```python
UserMultiSelectMenu(action_id: str, initial_users: Optional[List[str]] = None, confirm: Optional[ConfirmationDialogue] = None, max_selected_items: Optional[int] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

This interactive UI element allows users to select multiple users visible
    to the current user in the active workspace.

See: [https://api.slack.com/reference/block-kit/block-elements#users_multi_select](https://api.slack.com/reference/block-kit/block-elements#users_multi_select).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_users` | `Optional[List[str]]` | a list of string user IDs to be intially selected<br />when the element is first rendered. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when<br />the menu is used. |
| `max_selected_items` | `Optional[int]` | the highest number of items from the list that<br />can be selected at one time. |
| `focus_on_load` | `bool` | whether or not the menu will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the menu when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### UserSelectMenu {#elements.UserSelectMenu}

**Class**

```python
UserSelectMenu(action_id: str, initial_user: Optional[str] = None, confirm: Optional[ConfirmationDialogue] = None, focus_on_load: bool = False, placeholder: Optional[TextLike] = None)
```

<div className="api-docstring">

A select menu interactive UI element, sourced automatically with Slack users from the
    current workspace visible to the current user.

See: [https://api.slack.com/reference/block-kit/block-elements#users_select](https://api.slack.com/reference/block-kit/block-elements#users_select).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str` | an identifier so the source of the action can be known. |
| `initial_user` | `Optional[str]` | the single (string) user ID that will be initially selected<br />when first presented to the user. |
| `confirm` | `Optional[ConfirmationDialogue]` | a `ConfirmationDialogue` object that will be presented when an<br />option in the overflow menu is selected. |
| `focus_on_load` | `bool` | whether or not the input will be set to autofocus<br />within the view object. |
| `placeholder` | `Optional[TextLike]` | a plain-text `Text` object (max 150 chars) that shows<br />in the input when it's initially rendered. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>

### WorkflowButton {#elements.WorkflowButton}

**Class**

```python
WorkflowButton(text: TextLike, workflow: Optional[Workflow] = None, style: Optional[ButtonStyleLike] = ButtonStyle.DEFAULT, accessibility_label: Optional[str] = None)
```

<div className="api-docstring">

An interactive component that allows users to run a link trigger with
    customizable inputs.

See: [https://api.slack.com/reference/block-kit/block-elements#workflow_button](https://api.slack.com/reference/block-kit/block-elements#workflow_button).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `TextLike` | the text content that will appear in the button. |
| `workflow` | `Optional[Workflow]` | a [`Workflow`](/v1.2.5/reference/objects/#objects.Workflow) object<br />that contains details about the workflow that will run when the<br />button is clicked. |
| `style` | `Optional[ButtonStyleLike]` | one of `Default`, `Primary`, or `Danger`, determines the<br />visual style of the button. Consider using the `ButtonStyle`<br />object for this. |
| `accessibility_label` | `Optional[str]` | a string label for longer descriptive text about<br />a button element. Used by screen readers (max 75 chars). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation. |

</div>
